--- a/src/Application.css
+++ b/src/Application.css
@@ -1,15 +1,12 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/**************************************************************************/
+/** Container
+/**************************************************************************/
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
 }
 
 
@@ -22,6 +19,11 @@ code {
   background-color: #636363;
   height: 36px;
   line-height: 36px;
+}
+
+div.app-nav-bar{
+  flex-shrink: 0;
+  width: 100%;
 }
 
 .app-tab-container {
@@ -49,3 +51,15 @@ code {
 }
 
 
+/**************************************************************************/
+/** Body
+/**************************************************************************/
+
+.app-body {
+  width: 100%;
+  height: 100%;
+}
+
+.app-body > div {
+  height: 100%;
+}
