--- a/src/views/ThumbnailView.css
+++ b/src/views/ThumbnailView.css
@@ -1,100 +1,99 @@
-/**************************************************************************/
-/** Thumbnail Panel
-/**************************************************************************/
-
 .thumbnail-view {
+
     text-align: center;
-}
 
 
-/**************************************************************************/
-/** Thumbnail
-/**************************************************************************/
 
-.thumbnail-view .thumbnail {
-    width: 320px;
-    height: 320px;
-    display: inline-block;
-    /*float: left;*/
-    background-repeat:no-repeat;
-    background-position: center center;
-    cursor: pointer;
-}
+  /**************************************************************************/
+  /** Thumbnail Container
+  /**************************************************************************/
 
-
-/**************************************************************************/
-/** Folder Icon
-/**************************************************************************/
-
-.thumbnail-view .thumbnail .folder-icon {
-    color: #45413a;
-    text-shadow: -6px 3px 6px #000;
-    transition: 0.4s;
-}
-
-.thumbnail-view .thumbnail .folder-icon:after {
-    font-family: "Font Awesome 5 Free";
-    content: "\f07b"; /* fa-folder */
-    font-weight: 900; /* fas (solid) */
-    font-size: 201px;
-}
-
-.thumbnail-view .thumbnail .folder-icon:hover {
-    color: #534631;
-    text-shadow: -9px 7px 17px #000;
-}
+    .thumbnail {
+        width: 320px;
+        height: 320px;
+        display: inline-block;
+        /*float: left;*/
+        background-repeat:no-repeat;
+        background-position: center center;
+        cursor: pointer;
+    }
 
 
-/**************************************************************************/
-/** Missing Thumbnail Icon
-/**************************************************************************/
+  /**************************************************************************/
+  /** Folder Icon
+  /**************************************************************************/
 
-.thumbnail-view .thumbnail.not-available {
-    position: relative;
-}
+    .thumbnail .folder-icon {
+        color: #45413a;
+        text-shadow: -6px 3px 6px #000;
+        transition: 0.4s;
+    }
 
-.thumbnail-view .thumbnail.not-available:before {
-    content: '';
-    width: calc(100% - 40px);
-    height: calc(100% - 40px);
-    background-color: rgba(0,0,0,0.5);
-    border-radius: 7px;
-    position: absolute;
-    left: 20px;
-    top: 20px;
-}
+    .thumbnail .folder-icon:after {
+        font-family: "Font Awesome 5 Free";
+        content: "\f07b"; /* fa-folder */
+        font-weight: 900; /* fas (solid) */
+        font-size: 201px;
+    }
 
-.thumbnail-view .thumbnail.not-available:after {
-    font-family: "Font Awesome 5 Free";
-    font-size: 100px;
-    content: "\f070"; /* far fa-eye-slash */
-    z-index: 1;
-    position: absolute;
-    right: calc(50% - 60px);
-    top: calc(50% - 60px);
-}
+    .thumbnail .folder-icon:hover {
+        color: #534631;
+        text-shadow: -9px 7px 17px #000;
+    }
 
 
-/**************************************************************************/
-/** Missing Search Results
-/**************************************************************************/
+  /**************************************************************************/
+  /** Missing Thumbnail Icon
+  /**************************************************************************/
 
-.thumbnail-view .no-search-results {
-    text-align: center;
-    font-size: 20px;
-    color: #777;
-}
+    .thumbnail.not-available {
+        position: relative;
+    }
 
-.thumbnail-view .no-search-results .icon {
-    color: #e9e9e9;
-    color: #3a3e45;
-    text-shadow: -6px 3px 6px #000;
-    padding: 20px 0;
-}
+    .thumbnail.not-available:before {
+        content: '';
+        width: calc(100% - 40px);
+        height: calc(100% - 40px);
+        background-color: rgba(0,0,0,0.5);
+        border-radius: 7px;
+        position: absolute;
+        left: 20px;
+        top: 20px;
+    }
 
-.thumbnail-view .no-search-results .icon:after {
-    font-family: "Font Awesome 5 Free";
-    content: "\f002"; /* fa-search */
-    font-weight: 900; /* fas (solid) */
-    font-size: 160px;
+     .thumbnail.not-available:after {
+        font-family: "Font Awesome 5 Free";
+        font-size: 100px;
+        content: "\f070"; /* far fa-eye-slash */
+        z-index: 1;
+        position: absolute;
+        right: calc(50% - 60px);
+        top: calc(50% - 60px);
+    }
+
+
+  /**************************************************************************/
+  /** Missing Search Results
+  /**************************************************************************/
+
+    .no-search-results {
+        text-align: center;
+        font-size: 20px;
+        color: #777;
+    }
+
+    .no-search-results .icon {
+        color: #e9e9e9;
+        color: #3a3e45;
+        text-shadow: -6px 3px 6px #000;
+        padding: 20px 0;
+    }
+
+    .no-search-results .icon:after {
+        font-family: "Font Awesome 5 Free";
+        content: "\f002"; /* fa-search */
+        font-weight: 900; /* fas (solid) */
+        font-size: 160px;
+    }
+
 }
